Parcel Backoffice+FrontOffice+DriverInterface Updates

--- a/src/app/Components/BackOffice/drivers/drivers.component.html
+++ b/src/app/Components/BackOffice/drivers/drivers.component.html
@@ -1,5 +1,5 @@
 <div class="drivers-list">
-  <h2 class="title">List of Drivers</h2>
+  <h2 class="title"> Drivers Management</h2>
 
   <!-- Add Driver Button --><a href="/back-office/drivers/create">
   <button class="btn btn-add">Add a Driver</button>
