--- a/src/app/Components/BackOffice/complaintBackOffice/complaint-detailsBackOffice/complaint-detailsBackOffice.component.html
+++ b/src/app/Components/BackOffice/complaintBackOffice/complaint-detailsBackOffice/complaint-detailsBackOffice.component.html
@@ -1,1 +1,22 @@
-<p>complaint-details works!</p>
+@if (isLoading) {
+  <div>
+    <p>Chargement en cours...</p>
+  </div>
+} @else if (complaint) {
+  <div>
+    <h2>Détails de la Réclamation</h2>
+    <p><strong>Prénom:</strong> {{ complaint.simpleUser?.userFirstName }}</p>
+    <p><strong>Nom:</strong> {{ complaint.simpleUser?.userLastName }}</p>
+    <p><strong>Description:</strong> {{ complaint.complaintDescription }}</p>
+
+    <div>
+      <textarea #responseInput placeholder="Entrez votre réponse ici"></textarea>
+      <button (click)="respondComplaint(responseInput.value)" class="btn btn-success">
+        Répondre
+      </button>
+    <button (click)="ignoreComplaint()" class="btn btn-danger">
+        Ignorer 
+      </button>
+    </div>
+  </div>
+}
