--- a/src/app/Components/FrontOffice/carpool/carpooling-list/carpooling-list.component.html
+++ b/src/app/Components/FrontOffice/carpool/carpooling-list/carpooling-list.component.html
@@ -1,1 +1,26 @@
-<p>carpooling-list works!</p>
+<div class="container">
+  <h2><i class="bi bi-car-front"></i> Carpools </h2>
+
+  <div *ngIf="isLoading" class="alert alert-info" role="alert">
+    Chargement des covoiturages...
+  </div>
+  <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+    {{ errorMessage }}
+  </div>
+
+  <div class="row">
+    <div *ngFor="let carpool of futureCarpools" class="col-md-4 mb-3">
+      <div class="card border-danger mb-3" style="max-width: 18rem;">        <div class="card-header">
+          <h3><i class="bi bi-geo"></i> {{ carpool.carpoolDeparture }} <i class="bi bi-arrow-right"></i> {{ carpool.carpoolDestination }}</h3>
+        </div>
+        <div class="card-body">
+          <div class="card-body text-danger"><strong><i class="bi bi-calendar-check"></i> Date :</strong> {{ carpool.carpoolDate }}</div>
+          <div class="card-body text-danger"><strong><i class="bi bi-stopwatch"></i> time :</strong> {{ carpool.carpoolTime }}</div>
+          <div class="card-body text-danger"><strong><i class="bi bi-people"></i> Capacity:</strong> {{ carpool.carpoolCapacity }}</div>
+          <div class="card-body text-danger"><strong><i class="bi bi-cash"></i> price :</strong> {{ carpool.carpoolPrice }} TND</div>
+          <button class="btn btn-danger" [routerLink]="['/carpooling', carpool.carpoolId]">More details</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
