--- a/src/app/Components/FrontOffice/complaint/complaint-details/complaint-details.component.html
+++ b/src/app/Components/FrontOffice/complaint/complaint-details/complaint-details.component.html
@@ -9,7 +9,7 @@
 
             <p><strong>Description :</strong> {{ complaint.complaintDescription }}</p>
           <p>
-            <strong>Statut :</strong>
+            <strong>Status :</strong>
             <span [class]="{
               'text-success': complaint.complaintStatus === 'resolved',
               'text-warning': complaint.complaintStatus === 'pending',
