--- a/src/app/Components/BackOffice/complaintBackOffice/complaint-detailsBackOffice/complaint-detailsBackOffice.component.html
+++ b/src/app/Components/BackOffice/complaintBackOffice/complaint-detailsBackOffice/complaint-detailsBackOffice.component.html
@@ -1,12 +1,18 @@
+
+<br>
+<div class="complaint-container">
+
+
+
 @if (isLoading) {
   <div>
     <p>Chargement en cours...</p>
   </div>
 } @else if (complaint) {
   <div>
-    <h2>Détails de la Réclamation</h2>
-    <p><strong>Prénom:</strong> {{ complaint.simpleUser?.userFirstName }}</p>
-    <p><strong>Nom:</strong> {{ complaint.simpleUser?.userLastName }}</p>
+    <h2 class="complaint-title" >Détails de la Réclamation</h2>
+    <p><strong>Prénom:</strong> {{ complaint.simpleUser?.firstName }}</p>
+    <p><strong>Nom:</strong> {{ complaint.simpleUser?.lastName }}</p>
     <p><strong>Description:</strong> {{ complaint.complaintDescription }}</p>
 
     <div>
@@ -14,8 +20,8 @@
       <button (click)="respondComplaint(responseInput.value)" class="btn btn-success">
         Répondre
       </button>
-    <button (click)="ignoreComplaint()" class="btn btn-danger">
-        Ignorer 
+      <button (click)="ignoreComplaint()" class="btn btn-danger">
+        Ignorer
       </button>
     </div>
   </div>
