--- a/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.html
+++ b/src/app/Components/FrontOffice/trip/trip-create/trip-create.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <!-- Form Section -->
+    <!-- Form Section sectionn -->
     <div class="row justify-content-center">
         <!-- Left Column: Departure -->
         <div class="col-md-5">
